<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.xginko</groupId>
    <artifactId>PumpkinPVPReloaded</artifactId>
    <version>1.8.0</version>
    <packaging>jar</packaging>

    <name>PumpkinPVPReloaded</name>
    <description>Exploding pumpkins for spooky Halloween pvp</description>
    <url>github.com/xGinko/PumpkinPVPReloaded</url>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>space.arim.morepaperlib</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.morepaperlib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.benmanes.caffeine</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.caffeine</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.kyori</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.github.thatsmusic99.configurationmaster</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.configmaster</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.cryptomorin</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.xseries</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.reflections</pattern>
                                    <shadedPattern>me.xginko.pumpkinpvpreloaded.libs.reflections</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/LICENSE.txt</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>configmaster-repo</id>
            <url>https://ci.pluginwiki.us/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>spacearim-repo</id>
            <url>https://mvn-repo.arim.space/lesser-gpl3/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
        <dependency>
            <groupId>space.arim.morepaperlib</groupId>
            <artifactId>morepaperlib</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.thatsmusic99</groupId>
            <artifactId>ConfigurationMaster-API</artifactId>
            <version>v2.0.0-rc.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.9.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>11.3.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.3.4</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-ansi</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-logger-slf4j</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
        </dependency>
    </dependencies>
</project>
